policies/mount-container-runtime-socket.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: mount-container-runtime-socket
spec:
  categories:
  - Security Best Practices
  criteriaLocked: true
  description: Alert on deployments with a volume mount on the container runtime socket
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions:
  - name: Don't alert on StackRox collector
    deployment:
      name: collector
      scope:
        cluster: ''
        namespace: stackrox
        label: null
    image: null
    expiration: null
  - name: Don't alert on ucp-agent
    deployment:
      name: ucp-agent
      scope: null
    image: null
    expiration: null
  - name: Don't alert on ucp-agent-s390x
    deployment:
      name: ucp-agent-s390x
      scope: null
    image: null
    expiration: null
  - name: Don't alert on StackRox compliance
    deployment:
      name: ''
      scope:
        cluster: ''
        namespace: stackrox
        label:
          key: app
          value: stackrox-compliance
    image: null
    expiration: null
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: GitOps - Mount Container Runtime Socket
  policySections:
  - sectionName: ''
    policyGroups:
    - fieldName: Volume Source
      booleanOperator: OR
      negate: false
      values:
      - value: /var/run/docker.sock
      - value: /var/run/crio/crio.sock
      - value: /run/crio/crio.sock
  rationale: Mounting the container runtime socket implies container access to the
    runtime daemon. With direct access to the runtime daemon, a user can schedule
    containers and collect information about the running containers. This can be used
    as a method of discovery or persistence in an attack. Depending on the container
    runtime configuration, this may also be used as a method of privilege escalation
    to the host operating system. Since this can be used as an attack, deployments
    that mount the container runtime socket should be minimized to those absolutely
    necessary.
  remediation: 'Investigate if this deployment is being deployed for legitimate business
    purposes, and if so, that mounting the container runtime socket is required. Perform
    one of the following actions based on this investigation: 1. Exclude the deployment
    in this policy because it is being deployed for legitimate use cases. 2. Do not
    mount the container runtime socket in the deployment and redeploy. 3. Launch an
    investigation into why a deployment with this insecure configuration useful to
    attackers was deployed.'
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: false
